--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,6 +30,9 @@ $grey-900:            #212529;
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
+$my-blue-color: #669bdf !default;
+$my-cyan-color: #66b9df !default;
+
 // Theme colors
 
 $code-bg-color-light:     rgba($purple-color, 0.05);
